# lightweightvk

./: CMakeLists.txt  README.md
lvk/: CMakeLists.txt  LVK.cpp  LVK.h
lvk/vulkan/: CMakeLists.txt  VulkanClasses.cpp  VulkanUtils.cpp
lvk_android/: build.gradle  settings.gradle
lvk_android/app/: build.gradle
lvk_android/app/src/main/: AndroidManifest.xml
lvk_android/app/src/main/cpp/: CMakeLists.txt  NativeActivity.cpp
lvk_android/app/src/main/res/values/: strings.xml
lvk_android/gradle/wrapper/: gradle-wrapper.properties
samples/: Tiny_Mesh.cpp  Tiny_MeshLarge.cpp
src/igl/vulkan/: CMakeLists.txt  VulkanContext.cpp
